# envAPJATEL

./: .gitignore  README.md  docker-compose-django.yml  package-lock.json  package.json  pyproject.toml
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
static/css/: tailwind.css
templates/: base.html  index.html
