[tool.poetry]
name = "env-apjatil"
version = "0.1.0"
description = ""
authors = ["Michkail Piter <michkail@pitrlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
boto3 = "^1.34.119"
django-storages = "^1.14.3"
django-compressor = "^4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
